# Reconhecimento-de-Palavras-usando-ESP32-S3-e-TinyML

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/afe/: CMakeLists.txt  afe.c
components/afe/include/: afe.h
components/led_rgb/: CMakeLists.txt  led_rgb.c
components/led_rgb/include/: led_rgb.h
components/microphone_inmp441/: CMakeLists.txt  inmp441.c
components/microphone_inmp441/include/: inmp441.h
components/ring_buffer/: CMakeLists.txt  ring_buffer.c
components/ring_buffer/include/: ring_buffer.h
components/voice_control_pt/: CMakeLists.txt  README.txt
components/voice_control_pt/edge-impulse-sdk/classifier/: ei_run_classifier.h
components/voice_control_pt/model-parameters/: model_metadata.h  model_variables.h
components/voice_control_pt/porting/espidf/: ei_classifier_porting_espidf.c
components/voice_control_pt/tflite-model/: tflite_learn_7_compiled.cpp  tflite_learn_7_compiled.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
